fixing mobile spacing

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body {
     }
 
     body {
-        margin: 10px;
+        margin: 5px;
         font-size: 20px;
     }
 
@@ -162,8 +162,9 @@ body {
     }
 
     .productCard {
-        width: 100%;
+        width: 94%;
         padding: 12px;
+        margin: 3px 0px 3px 0px;
         font-size: 20px;
     }
 
@@ -188,7 +189,7 @@ body {
     }
 
     .imagesDiv img {
-        width: 50vw;
+        width: 100%;
         height: 50vw;
         object-fit: cover;
         flex-shrink: 0;
